# dmpbbo

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt~  FunctionApproximatorGMR.cpp
src/functionapproximators/: FunctionApproximatorGMR.cpp  FunctionApproximatorGMR.hpp  ModelParametersGMR.cpp  ModelParametersGMR.hpp
src/functionapproximators/demos/: CMakeLists.txt  demoTrainIncrementalGMR.cpp
src/functionapproximators/tests/: CMakeLists.txt
test/: test_vf_gmr.cpp
